[package]
name = "automatic-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
carla = { version = "0.10.0" }
clap = { version = "4.4.2", features = ["derive"] }
ctrlc = "3.4.1"
# ggez = "0.9.3"
nalgebra = "0.32.3"
rand = "0.8.5"
