[package]
name = "automatic-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
carla = { workspace = true }
clap = { version = "4.5.4", features = ["derive"] }
ctrlc = "3.4.4"
# ggez = "0.9.3"
nalgebra = "0.32.5"
noisy_float = "0.2.0"
rand = "0.8.5"
