[package]
name = "show"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
carla = { workspace = true }
clap = { version = "4.5.4", features = ["derive"] }
nalgebra = { version = "0.32.5", features = ["serde-serialize"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
